--- a/vignettes/tidy-disa.Rmd
+++ b/vignettes/tidy-disa.Rmd
@@ -16,9 +16,33 @@ knitr::opts_chunk$set(
 
 ## Open RStudio and Load Packages
 
-If not already done, open a new RStudio work session.  As is normally the case, we'll begin by creating a new R script (File -> New File -> R script).  We'll also load the core R packages needed for tidying DISA tabular data. The Tidyverse is a collection of open-source packages designed for general data science use. Sismar is a package designed for the specific purpose of munging and conducting feature engineering for MISAU tabular exports, in this case from the OpenLDR DISA platform. Finally, the Glue packages provides functions that allow us to combine and use string values within code.
+If not already done, open a new RStudio work session.  As normal we'll begin by our work by creating a new R script (File -> New File -> R script).  We'll also load the core R packages needed for tidying DISA tabular data. Tidyverse is our trusty multipurpose "Swiss Army Knife" of data science programming in R.  The sismar package allows us tidy data exported from MISAU health information systems including DISA. The glue package will allow us to combine and use string values within code.
 
 
-```{r setup}
+```{r, eval = FALSE, echo = TRUE}
+library(tidyverse)
 library(sismar)
+library(glue)
+```
+
+## Define Global Variables
+
+Before we process our DISA viral load data, let's set a couple values in the global R environment so that we can pass them into arguments of our sismar function later on.  First define a value for the path to our OpenLDR DISA viral load .xlsx export saved on our local machine.  Also define the month for which the DISA viral load data was exported from the OpenLDR system.  The month date format should be set in format %Y-%m-%d ("YYYY-MM-DD"). Although there are no restrictions on defining the %d of the date string, it is best to be consistent over time.  That is to say if we're defining day as "01" in our processing of June DISA data then we should also define it as "01" in subsequent month submissions.  
+
+
+```{r}
+path_disa_cv <- "Data/Relatorio Mensal de Carga Viral Junho 2024.xlsx"
+month_input <- "2024-06-20"
+
+path_disa_cv
+month_input
+
+```
+
+## Tidy Monthly DISA Viral Load Dataset
+
+Can you believe we've already done all the hard work of processing our monthly DISA viral load data set?!  All we need to do now is write a single line of code to call the sismar `process_disa_cv` function and pass in the arguments we've already set in our global environment and WALLAH we've got our tidy viral load data ready for analysis!
+
+```{r, eval = FALSE}
+df <- process_disa_cv(path_disa_cv)
 ```
