--- a/vignettes/tidy_sop.Rmd
+++ b/vignettes/tidy_sop.Rmd
@@ -81,3 +81,9 @@ df <- process_sisma_csv(file = path_hiv_tarv,
 ```
 
 Happy analysis of your new tidy dataset!
+
+
+
+---
+
+*Disclaimer: The findings, interpretation, and conclusions expressed herein are those of the authors and do not necessarily reflect the views of United States Agency for International Development. All errors remain our own.*
