--- a/vignettes/tidy_sop.Rmd
+++ b/vignettes/tidy_sop.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tidy SISMA Program Data"
+title: "Arrumar dados programático do SISMA"
 output:
   rmarkdown::html_vignette:
     toc: true
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Open RStudio and Load Packages
+## Abrir o RStudio e carregar os pacotes
 
-Let's begin by opening a new RStudio work session.  Once a session is open, create a new R script (File -> New File -> R script) and load the core R packages needed for tidying SISMA .csv exports. The Tidyverse is a collection of open-source packages designed for general data science use. Sismar is a package designed for the specific purpose of munging and conducting feature engineering for SISMA rectangular exports. Finally, the Glue packages provides functions that allow us to combine and use string values within code.
+Comecemos por abrir uma nova sessão de trabalho do RStudio.  Uma vez aberta a sessão, crie um novo script R (File -> New File -> R script) e carregue os principais pacotes R necessários para arrumar as exportações .csv do SISMA. O `tidyverse` é uma coleção de pacotes de código aberto concebidos para utilização geral em ciência de dados. O `sismar` é um pacote desenvolvido com o objetivo específico de efectuar a limpeza e a engenharia de caraterísticas das exportações rectangulares do SISMA. Por último, os pacotes `glue` fornecem funções que nos permitem combinar e utilizar valores de cadeia de caracteres no código.
 
 ```{r, eval = FALSE, echo = TRUE}
 library(tidyverse)
@@ -28,9 +28,9 @@ library(sismar)
 library(glue)
 ```
 
-## Define Global Variables
+## Definir variáveis globais
 
-We'll begin our adventure by coding three values into our global environment for later use - 1) the calendar year for which data was downloaded from SISMA; 2) the path to the SISMA .csv export saved on our local machine; and 3) the path and filename where our processed dataset will be saved. Note that best practice is to store data and scripts in specific pre-created R project folder structures. This facilitates reproducibility and collaboration across users.   
+Começaremos a nossa aventura codificando três valores no nosso ambiente global para utilização posterior - 1) o ano civil para o qual os dados foram descarregados do SISMA; 2) o caminho para a exportação .csv do SISMA guardada na nossa máquina local; e 3) o caminho e o nome do ficheiro onde o nosso conjunto de dados processados será guardado. Note que a melhor prática é armazenar dados e scripts em estruturas de pastas específicas de projectos R pré-criados. Isto facilita a reprodutibilidade e a colaboração entre utilizadores.   
 
 ```{r}
 year <- "2024"
@@ -41,37 +41,37 @@ path_hiv_tarv
 output_hiv_tarv
 ```
 
-## Tidy SISMA Dataset
+## Arrumar dados do SISMA
 
-Having defined the local path to our SISMA dataset, we can now call functions from the sismar package to generate a tidy analytical dataframe.  This can be done either by using a combination of sismar functions called in sequence or by calling a singular wrapper function and specifying the appropriate arguments.  Let's start with the first, slightly more verbose, approach.  
+Tendo definido o caminho local para o nosso conjunto de dados SISMA, podemos agora chamar funções do pacote sismar para gerar um quadro de dados analítico organizado.  Isto pode ser feito utilizando uma combinação de funções sismar chamadas em sequência ou chamando uma função de invólucro singular e especificando os argumentos apropriados.  Comecemos com a primeira abordagem, um pouco mais detalhada. 
 
 ##### Approach 1: Using Sequential Functions
 
-We'll start by calling `clean_sisma_csv` and providing the function argument that specifies where our downloaded SISMA .csv export is saved on our local machine. Note that this function is not dependent on the type of program data contained within the .csv file. This means that clean_sisma_csv` can be used with any SISMA tabular download. In the output notice that the data frame's indicators have been pivoted to a long format, that a small number of variables have been removed, and that the names of the pivoted indicators have been modified to be more machine readable.
+Começaremos chamando `clean_sisma_csv` e fornecendo o argumento da função que especifica onde nossa exportação SISMA .csv baixada é salva em nossa máquina local. Observe que essa função não depende do tipo de dados do programa contidos no arquivo .csv. Isso significa que clean_sisma_csv` pode ser usado com qualquer download tabular do SISMA. No resultado, repare que os indicadores do quadro de dados foram dinamizados para um formato longo, que um pequeno número de variáveis foi removido e que os nomes dos indicadores dinamizados foram modificados para serem mais legíveis.
 
 ```{r, eval = FALSE}
 df <- clean_sisma_csv(path_hiv_tarv)
 ```
 
-Next, we'll call a sismar function to engineer data features that are encoded in the indicator names created by `clean_sisma_csv`.  In this use case, we call `parse_sisma_hiv_tarv`. It's important to note that there are numerous types of standard programmatic data sets that can be generated through saved SISMA reports. This means that the specific sismar parsing function called for feature engineering will vary depending on type of programmatic data set provided by the user. A full list and description of each sismar parsing function is provided in the sismar [package documentation](https://usaid-mozambique.github.io/sismar/reference/index.html).
+Em seguida, chamaremos uma função sismar para criar caraterísticas de dados que são codificadas nos nomes de indicadores criados por `clean_sisma_csv`.  Neste caso de uso, chamamos `parse_sisma_hiv_tarv`. É importante notar que existem vários tipos de conjuntos de dados programáticos padrão que podem ser gerados através de relatórios SISMA guardados. Isto significa que a função específica de análise do sismar chamada para a engenharia de caraterísticas varia consoante o tipo de conjunto de dados programáticos fornecido pelo utilizador. A lista completa e a descrição de cada função de análise do sismar são fornecidas na secção sismar [package documentation](https://usaid-mozambique.github.io/sismar/reference/index.html).
 
 ```{r, eval = FALSE}
 df <- parse_sisma_hiv_tarv(df)
 ```
-In the parsing function output notice that new variables have been added to the data frame and that indicator names have been encoded to be more succinct. This tidy format is perfect for analysis!
+No resultado da função de análise, repare que foram adicionadas novas variáveis ao quadro de dados e que os nomes dos indicadores foram codificados para serem mais sucintos. Este formato organizado é perfeito para análise!
 
-##### Approach 2: Using Wrapper Function
+##### Approach 2: Utilização da função "wrapper"
 
-As an alternative to approach 1, sismar also provides a wrapper function that calls both `clean_sisma_csv` and `parse_sisma_hiv_tarv` (or a similar user-specified parsing function). This reduces the amount of typing and code required for producing our final dataset. In this approach, we simply call `process_sisma_csv` and provide two required arguments: 1) The "file" argument that specifies the location of the SISMA .csv export and; 2) The "type" argument that specifies the programmatic data type for tidy'ing. A full list of values that can be passed to the "type" argument can be found in the `process_sisma_csv` [documentation](https://usaid-mozambique.github.io/sismar/reference/process_sisma_csv.html). 
+Como alternativa à abordagem 1, o sismar também fornece uma função wrapper que chama tanto `clean_sisma_csv` como `parse_sisma_hiv_tarv` (ou uma função de análise semelhante especificada pelo utilizador). Isso reduz a quantidade de digitação e código necessários para produzir nosso conjunto de dados final. Nesta abordagem, nós simplesmente chamamos `process_sisma_csv` e fornecemos dois argumentos necessários: 1) O argumento “file” (ficheiro) que especifica a localização da exportação .csv do SISMA e; 2) O argumento “type” (tipo) que especifica o tipo de dados programático para a arrumação. Uma lista completa de valores que podem ser passados para o argumento “type” pode ser encontrada no `process_sisma_csv` [documentation](https://usaid-mozambique.github.io/sismar/reference/process_sisma_csv.html). 
 
 ```{r, eval = FALSE}
 df <- process_sisma_csv(file = path_hiv_tarv, 
                         type = "HIV TARV")
 ```
 
-Notice the output of this singular wrapper function is identical to the data frame generated in approach 1!
+Repare-se que o resultado desta função singular é idêntico ao quadro de dados gerado na abordagem 1!
 br<>
-`process_sisma_csv` includes one more optional argument that defines the language of the variable names in the output file.  Currently the only language options are "portuguese" and "english" with the former defined as the argument default. By defining the argument value as "english" notice the change in the names of the variable output.
+O `process_sisma_csv` inclui mais um argumento opcional que define o idioma dos nomes das variáveis no ficheiro de saída.  Atualmente as únicas opções de idioma são “portuguese” e “english” sendo a primeira definida como argumento por defeito. Ao definir o valor do argumento como “english” observe a mudança nos nomes das variáveis de saída.
 
 ```{r, eval = FALSE}
 df <- process_sisma_csv(file = path_hiv_tarv, 
@@ -80,7 +80,7 @@ df <- process_sisma_csv(file = path_hiv_tarv,
 
 ```
 
-Happy analysis of your new tidy dataset!
+Boa análise do seu novo conjunto de dados organizado!
 
 
 
