--- a/vignettes/tidy_sop.Rmd
+++ b/vignettes/tidy_sop.Rmd
@@ -45,7 +45,7 @@ output_hiv_tarv
 
 Tendo definido o caminho local para o nosso conjunto de dados SISMA, podemos agora chamar funções do pacote sismar para gerar um quadro de dados analítico organizado.  Isto pode ser feito utilizando uma combinação de funções sismar chamadas em sequência ou chamando uma função de invólucro singular e especificando os argumentos apropriados.  Comecemos com a primeira abordagem, um pouco mais detalhada. 
 
-##### Approach 1: Using Sequential Functions
+##### Abordagem 1: Using Sequential Functions
 
 Começaremos chamando `clean_sisma_csv` e fornecendo o argumento da função que especifica onde nossa exportação SISMA .csv baixada é salva em nossa máquina local. Observe que essa função não depende do tipo de dados do programa contidos no arquivo .csv. Isso significa que clean_sisma_csv` pode ser usado com qualquer download tabular do SISMA. No resultado, repare que os indicadores do quadro de dados foram dinamizados para um formato longo, que um pequeno número de variáveis foi removido e que os nomes dos indicadores dinamizados foram modificados para serem mais legíveis.
 
@@ -60,7 +60,7 @@ df <- parse_sisma_hiv_tarv(df)
 ```
 No resultado da função de análise, repare que foram adicionadas novas variáveis ao quadro de dados e que os nomes dos indicadores foram codificados para serem mais sucintos. Este formato organizado é perfeito para análise!
 
-##### Approach 2: Utilização da função "wrapper"
+##### Abordagem 2: Utilização da função "wrapper"
 
 Como alternativa à abordagem 1, o sismar também fornece uma função wrapper que chama tanto `clean_sisma_csv` como `parse_sisma_hiv_tarv` (ou uma função de análise semelhante especificada pelo utilizador). Isso reduz a quantidade de digitação e código necessários para produzir nosso conjunto de dados final. Nesta abordagem, nós simplesmente chamamos `process_sisma_csv` e fornecemos dois argumentos necessários: 1) O argumento “file” (ficheiro) que especifica a localização da exportação .csv do SISMA e; 2) O argumento “type” (tipo) que especifica o tipo de dados programático para a arrumação. Uma lista completa de valores que podem ser passados para o argumento “type” pode ser encontrada no `process_sisma_csv` [documentation](https://usaid-mozambique.github.io/sismar/reference/process_sisma_csv.html). 
 
