***feat*** vignette additions

--- a/vignettes/export-sisma.Rmd
+++ b/vignettes/export-sisma.Rmd
@@ -31,7 +31,7 @@ Com a ferramenta de visualização aberta, clique em “Arquivo” na barra de m
 knitr::include_graphics("images/sisma-reporte-lista.png", dpi = 144)
 ```
 
-
+## Passo seguinete
 
 ---
 
