--- a/vignettes/export-sisma.Rmd
+++ b/vignettes/export-sisma.Rmd
@@ -17,26 +17,47 @@ knitr::opts_chunk$set(
 )
 ```
 
-O pacote `sismar` foi desenvolvido para facilitar a limpeza e a transformação de tabelas de dados padrão exportados do SISMA. O artigo abaixo fornece uma explicação passo a passo sobre como extrair essas tabelas de dados padrão do SISMA. Notar que o pacote só é capaz de efetuar esta acção em tabelas de dados reconhecidos.  
+O pacote `sismar` foi desenvolvido para facilitar a limpeza e transformação de tabelas de dados padrão exportados do SISMA. O artigo abaixo fornece uma explicação passo a passo sobre como exportar essas tabelas padrão do SISMA. Notar que as funções do pacote sismar só são capazes de executar estas acções em exportações reconhecidas do SISMA.  
 
 ## Gerar relatório SISMA padrão 
 
-O SISMA inclui ferramentas para visualizar e exportar os dados brutos contidos na sua base de dados.  Começaremos o nosso trabalho navegando para o painel de aplicações localizado no canto superior direito da interface do SISMA. Selecione a ferramenta de visualização ilustrado abaixo.  
+O próprio SISMA inclui ferramentas para visualizar e exportar dados brutos contidos na sua base de dados.  Havemos de inciar o nosso trabalho navegando dentro do SISMA para o painel de aplicações localizado no canto superior direito da interface do SISMA. Uma vez aberto este painel selecione a ferramenta de visualização ilustrado abaixo.  
 
 ```{r, echo =  FALSE, fig.align='center'}
 knitr::include_graphics("images/painel.png", dpi = 144)
 ```
 
-Uma vez aberta a ferramenta de visualização, clique em “Arquivo” na barra de menus e, em seguida, clique na opção “Abrir”. Isto abrirá uma janela onde se pode selecionar um dos numerosos relatórios padrão SISMA que foram criados pelos utilizadores do sistema. Um subconjunto destes relatórios foram desenhados especificamente para trabalhar com as funcionalidades do pacote `sismar`. 
+Uma vez aberta a ferramenta de visualização, clique em “Arquivo” na barra de menus e, em seguida, clique na opção “Abrir”. Isto abrirá uma janela onde se pode selecionar um dos numerosos relatórios padrão SISMA que foram criados pelos utilizadores do sistema. Um subconjunto destes relatórios foram desenhados especificamente para trabalhar com as funcionalidades do pacote `sismar`. Estes relatórios padrão podem ser facilmente achados pesquisando com a palavra-chave "sismar" como ilustrado abaixo.
 
+```{r, echo =  FALSE, fig.align='center'}
+knitr::include_graphics("images/sisma-reporte-escolha.png", dpi = 144)
+```
 
-A tabela seguinte apresenta em pormenor a coleção de relatórios SISMA padrão que podem ser utilizados com o pacote R sismar. A primeira coluna da tabela, intitulada “Programa”, indica o programa do DNSP ao qual os dados se referem.  A segunda coluna, “Componente”, fornece o componente específico do programa capturado na exportação.  A terceira coluna “SISMA Report” (Relatório SISMA) indica o nome do relatório tal como foi guardado no SISMA.  Finalmente, a última coluna “No. Variables” (Nº de variáveis) representa uma contagem do número total de variáveis de coluna que devem estar presentes na exportação .csv extraída do SISMA.
+Os relatórios SISMA padrão específicos também podem ser encontrados pesquisando o nome de cada relatório individual guardado no SISMA. A tabela seguinte apresenta em pormenor o conjunto de relatórios SISMA padrão que podem ser utilizados com o pacote R `sismar`. A primeira coluna da tabela, intitulada “Programa”, indica o programa do DNSP ao qual os dados se referem.  A segunda coluna, “Componente”, fornece o componente específico do programa capturado na exportação de dados do SISMA.  A terceira coluna “Relatório SISMA" indica o nome do relatório tal como foi gravado no SISMA.  Finalmente, a última coluna “No. Variables” representa uma contagem do número total de colunas que devem constar na exportação .csv extraída do SISMA.
 
 ```{r, echo =  FALSE, fig.align='center'}
 knitr::include_graphics("images/sisma-reporte-lista.png", dpi = 144)
 ```
 
-## Passo seguinete
+Depois de encontrar o relatório padrão desejado, clique nele no menu e aguarde o carregamento da tabela de dados no seu navegador. Dependendo do número de utilizadores no sistema e do tamanho do conjunto de dados solicitado, isto pode demorar vários minutos.
+
+## Descarregar relatório SISMA padrão
+
+Assim que a tabela de dados aparecer, podemos descarregá-la. Aceda à barra de menus e clique na opção “Descarregar”. O menu oferece vários formatos diferentes mas é imprescindível descarregar os seus dados no formato CSV, pois as funções do pacote `sismar` foram desenhandas para reconhecer este formato específico.
+
+
+
+```{r, echo =  FALSE, fig.align='center'}
+knitr::include_graphics("images/sisma-reporte-descarregar.png", dpi = 144)
+```
+
+Neste ponto, o SISMA oferecerá a oportunidade de definir o nome e a localização do ficheiro que está a ser descarregado para o disco local. A prática recomendada é guardar o ficheiro com um nome que indique o tipo de relatório padrão que está a ser guardado e o ano do conteúdo do relatório (por exemplo sismar_hiv_autotest_2024.csv).
+
+Com o ficheiro gravado no disco local pode-se chamar este ficheiro em R utilizando a função do pacote `sismar` `process_sismar_export`, `process_sismar_csv`, ou `clean_sisma_csv`.  
+
+
+
+
 
 ---
 
